--- a/C03__JavaScript-Foundations-Part-2__JavaScript/Class/C3_Exercise/C3_Exercise_2/C3_Exercise_3.html
+++ b/C03__JavaScript-Foundations-Part-2__JavaScript/Class/C3_Exercise/C3_Exercise_2/C3_Exercise_3.html
@@ -7,7 +7,7 @@
     <title>Exercise #2</title>
   </head>
   <body>
-    <button onclick="statement()" class="btn-primary">Click me!</button>
+    <button onclick="printUserInfo({})" class="btn-primary">Click me!</button>
 
     <script src="C3_Exercise_2.js"></script>
   </body>
